# BLRI

./: .gitignore  README.md  pyproject.toml
src/blri/: __init__.py  coords.py  dsp.py  interferometry.py  parse.py  times.py
src/blri/entrypoints/: beamform.py  bfr5.py  coords.py  correlate.py  guppi_generation.py  pycorr.py  uvh5.py
src/blri/fileformats/: bfr5.py  guppiraw.py  hdf5.py  stamps.py  telinfo.py  uvh5.py
src/blri/metadata/: input.py
src/blri/tests/: input_generation.py
tests/: test_entrypoint_bfr5.py  test_entrypoint_correlate.py  test_entrypoint_pycorr.py
tests/references/: test.20x3_16_128_2.u1024i64.uvh5  test.20x3_16_128_2.u4i128.uvh5  test.20x8_16_16_2.u2i128.uvh5
tests/references/bfr5gen/: test.20x3_16_128_2.pcNoneb.bfr5
tests/references/correlate/: test.20x3_16_128_2.u4i16.uvh5  test.20x8_16_16_2.u2i128.uvh5
tests/references/pycorr/: test.20x3_16_128_2.u4i128.uvh5  test.20x8_16_16_2.u2i128.uvh5
