[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "BLRI"
version = "0.0.6"
authors = [
  { name="Ross Donnachie", email="code@radonn.co.za" },
]
description = "Breakthrough Listen Radio Interferometry Python package (pronounced `blurry`)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "h5py",
  "tomli",
  "pyerfa",
  "guppi @ git+https://github.com/MydonSolutions/guppi@v2.0",
  "pyproj",
  "pyyaml",
  "pydantic",
  "numpy"
]

[project.scripts]
blri_pycorr = "blri.entrypoints.pycorr:main"